# caffeinate-ui

./: caffeinate_ui.py  caffeinate_ui.spec  pyproject.toml
.github/workflows/: build.yml
assets/: app.icns
