[project]
name = "caffeinate-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyqt6>=6.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
caffeinate-ui = "caffeinate_ui:main"
